--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -17,7 +17,7 @@ This chapter presents the development of a preliminary PR system that combined a
 
 Alternate reality technologies have a long \& fruitful history of applications to aid in the investigation, understanding \& dissemination of information pertaining to our past.
 
-http://en.wikipedia.org/wiki/Virtual_heritage
+%http://en.wikipedia.org/wiki/Virtual_heritage
 
 Virtual heritage and cultural heritage have independent meanings: cultural heritage refers to sites, monuments, buildings and objects "with historical, aesthetic, archaeological, scientific, ethnological or anthropological value",[2] whereas virtual heritage refers to instances of these within a technological domain, usually involving computer visualization of artefacts or Virtual Reality environments.
 
@@ -36,7 +36,7 @@ ardito:combining
 Combining Multimedia Resources
 for an Engaging Experience of Cultural Heritage
 
-Introduces the CHeR model, for creating, converting into digital form & maintaining the
+Introduces the CHeR model, for creating, converting into digital form \& maintaining the
 multitude of data related to cultural heritage sites. Observes that cultural heritage sites
 often arouse little involvement in young people, particularly when presented with the ruins
 of ancient settlements whose current appearance no longer reflects their original aspect and purpose.
@@ -144,12 +144,12 @@ vlahakis:archeoguide
 
 Archeoguide: first results of an augmented reality, mobile computing system in cultural heritage sites
 
-A system that provides on-site help & augmented reality reconstructions of ancient ruins. Claims to have
+A system that provides on-site help \& augmented reality reconstructions of ancient ruins. Claims to have
 applications ranging from archaeological research to education to multimedia publishing and cultural
 tourism.
         
-Had a laptop, tablet computer & PDA version of the system, used GPS in some to ascertain location, compass
-to ascertain direction & to augment reality accordingly.
+Had a laptop, tablet computer \& PDA version of the system, used GPS in some to ascertain location, compass
+to ascertain direction \& to augment reality accordingly.
 
 This paper presents the ARCHEOGUIDE project
 (Augmented Reality-based Cultural Heritage On-site
@@ -256,12 +256,12 @@ Game based technology to enhance the learning of history and cultural heritage
 
 Abstract only that talks about the use of game technologies to support learning of users
 within cultural heritage sites. Says that the level of realism is ideal to visualise cultural
-heritage if a string focus on the environment's atmosphere & immersion is required, "emphasising
+heritage if a string focus on the environment's atmosphere \& immersion is required, "emphasising
 environmental effects such as fog, sky, water, particles", all of which self-proclaimed virtual
 worlds aren't as good at.
         
 Uses Unity3D! Mentions that it can produce web browser based applications as well as standalone
-ones, has a simple authoring interface & "exploits the latest graphical hardware by making extensive
+ones, has a simple authoring interface \& "exploits the latest graphical hardware by making extensive
 use of shaders to deliver high quality graphics".
 
 \textbf{*** Major good quote for VR (\& thus PR) vs AR!!!}
@@ -292,8 +292,8 @@ advanced imaging technology."
 archaeological artefacts and sites with enough fidelity to be truly accurate representations of their real
 world counterparts."
         
-Contrasts between photorealistic & non-photorealistic computer graphics and that for some users the realism
-isn't the most important factor, but rather how believeable & convincing it is, regardless if the imagery
+Contrasts between photorealistic \& non-photorealistic computer graphics and that for some users the realism
+isn't the most important factor, but rather how believeable \& convincing it is, regardless if the imagery
 emulates the physical properties of the real world or not. More 'artistic' means of expression can that do
 not necessarily hold true to a photographic view of a site can nonetheless be important to a user's understanding.
         
@@ -307,9 +307,9 @@ But...
 creation of historically accurate yet static worlds that leave little flexibility for interpretive and/or
 educational use."
         
-So advanced realistic modelling techniques are good for accuracy & authenticity, but non-photorealistic methods
+So advanced realistic modelling techniques are good for accuracy \& authenticity, but non-photorealistic methods
 can provide appropriate tools for more flexible uses in virtual heritage applications. This paper tries to
-combine both photorealism & interactivity into the same virtual reality framework under the CREATE project.
+combine both photorealism \& interactivity into the same virtual reality framework under the CREATE project.
         
 "...heritage is 'as much about the living and evolving place, people, and environment as it is about any
 single static monument'"
@@ -344,7 +344,7 @@ VR
 that must be examined from diverse and unique points of view"
         
 "heritage refers to the study of human activity not only through the recovery of remains, as is the case
-with archaeology, but also through tradition, art & cultural evidences, narratives, etc."
+with archaeology, but also through tradition, art \& cultural evidences, narratives, etc."
         
 "To virtualize heritage means to actualize it digitally, to simulate it using computer graphics technology..."
         
@@ -441,7 +441,7 @@ for practical virtual heritage applications.
 Presents a rendering package with heavy focus on optimizations such as not rendering buildings
 that are obscured by buildings in front of them, rendering buildings features like windows into
 the wall textures so from a distance it looks as though the windows are there so they only need to
-actually be rendered at closer range & the difference is less noticeable.
+actually be rendered at closer range \& the difference is less noticeable.
 
 %=======
 
@@ -462,6 +462,8 @@ AR has been used to add artefacts, actors \& reconstructed architecture to views
 In situations where VR content exists in cultural heritage contexts, it is experienced from a static position that causes both spatial \& temporal separation from the RW location that it relates to; in order to perform comparisons between RW \& VR content, users must interact with one \& \textit{subsequently} the other. A mobile XR platform will allow VR content in cultural heritage contexts to be experienced in tandem with the real site (where accessible), combining the immediate juxtaposition of real \& virtual content of AR with the immersive \& atmospheric qualities of HMD based VR, all without requiring alterations to the VR content (for example to make it compatible with an AR framework).
 
 %fixed/anchored AR interface~\cite{Weng2012}
+
+%=========================================================================================================
 
 \subsection{Digital Heritage at the University of St Andrews}
 
