vtw AR/VR citations

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -25,184 +25,53 @@ Virtual heritage and cultural heritage have independent meanings: cultural herit
 
 \textbf{Put some pictures in here, maybe one of VR applied to heritage \& one of AR applied to heritage.}
 
+\clearpage
+
 %=========================================================================================================
 % AR citations
 %=========================================================================================================
 
-Alternate reality applications to cultural heritage are particularly useful for young people...
-
-ardito:combining
-
-Combining Multimedia Resources
-for an Engaging Experience of Cultural Heritage
-
-Introduces the CHeR model, for creating, converting into digital form \& maintaining the
-multitude of data related to cultural heritage sites. Observes that cultural heritage sites
-often arouse little involvement in young people, particularly when presented with the ruins
-of ancient settlements whose current appearance no longer reflects their original aspect and purpose.
+The application of alternate reality techniques to cultural heritage promises particular benefits to young people as cultural heritage sites often arouse little involvement in them, especially when the site's present day appearance bears few traces of its original stature~\cite{ardito:combining}.
 
 %=======
 
-Augmented reality has seen frequent deployment to cultural heritage sites, where it
+Visual knowledge of a target scene has been employed to allow rendering of 3D virtual characters atop real views of Sajeongjeon and Gangnyeongjeon of Gyeongbokgung, representative of cultural heritage sites in Korea, without the need for additional sensors, by visually tracking a rectangular structure within the environment whose corners represented robust features for visual tracking~\cite{Kim2009,}. This approach addressed the inherent issues associated with tracking for augmented reality tours in cultural heritage sites due to the variation of tracking targets \& environments at such sites, by developing a visual tracking approach that can be applied to a wider range of sites~\cite{Seo2010}.
 
 %=======
 
-Kim2009
-
-Sajeongjeon and Gangnyeongjeon of Gyeongbokgung, which is the representative of the cultural heritages in Korea.
-
-The proposed system uses visual information of a target scene without any additional devices such as sensors and obtains the camera pose by tracking a rectangular structure where its corners are more robust features
-
-Rendered 3D characters atop the scene
-
-===ALSO=== (same people)
-
-Seo2010
-
-A tracking framework for augmented reality tours on cultural heritage sites
-
-Visual tracking for augmented reality tours is still challenging for
-cultural heritage sites because of the great variation of tracking tar-
-gets and environments on such sites. Even at today’s state of the
-art, it is almost impossible to apply just one tracking method to
-all the various environments with any hope of success. This paper
-presents a tracking framework to overcome this problem. It consists
-of different tracking flows, each efficiently using robust visual cues
-of the target scene. Analysis of the tracking environment enables
-more practical tracking at the sites. The reliability of the tracking
-framework is verified through on-site demonstrations at Gyeong-
-bokgung, the most symbolic cultural heritage site in Korea.
+The combination of different categories of alternate reality \& multimedia techniques into a contiguous platform for building \& managing exhibitions of 3D models of artefacts accessed in museums, galleries \& via the Web has been investigated~\cite{Wojciechowski2004}. This project, which involved the use of Web3D technologies, focussed not only on the digitization \& subsequent interaction with such content to aid its preservation \& protection, but also with making these resources as widely available as possible to any interested parties (scientists, archaeologists, curators, historians \& casual citizens)~\cite{walczak:applications}.
 
 %=======
 
-Wojciechowski2004
+\textbf{***What was the medium for the display here? HMD? CAVE? Screen? Talks about omnidirectional cameras for recording.}
 
-A system that allows museums to build and manage Virtual and
-Augmented Reality exhibitions based on 3D models of artifacts is
-presented. Dynamic content creation based on pre-designed
-visualization templates allows content designers to create virtual
-exhibitions very efficiently. Virtual Reality exhibitions can be
-presented both inside museums, e.g. on touch-screen displays
-installed inside galleries and, at the same time, on the Internet.
-Additionally, the presentation based on Augmented Reality
-technologies allows museum visitors to interact with the content
-in an intuitive and exciting manner.
-
-===AND=== (same people)
-
-walczak:applications
-
-Cultural heritage applications of virtual reality
-
-There are a number of ongoing projects that use VR/Web3D technologies in the domain of cultural heritage. Solutions are being
-developed for digitization and interactive visualization of cultural heritage objects ranging from small museum artifacts to entire
-cultural heritage cities. The aim is to provide technology that would aid the preservation and protection of these objects, while at same
-time making them widely available to scientists, archaeologists, curators, historians, and citizens for their enjoyment and learning.
-To efficiently use the VR/Web3D technology in cultural heritage applications the problems of automatic or semi-automatic creation of
-virtual representations of cultural objects, efficient storage, management and retrieval of cultural object collections, and advanced
-interactive visualization of virtual representations of cultural objects must be addressed.
-The goal of this workshop is to bring together researchers and practitioners in the area of cultural heritage applications of virtual
-reality and create a forum for presenting their work and exchanging research ideas
+The concepts of augmented reality \& telepresence have been combined, creating `augmented telepresence', to allow participants to experience a `fly-through' of the ancient Nara Heijo-kyo capital of Japan, by combining aerially captured omnidirectional video augmented with related information using AR techniques~\cite{Okura2006,Okura2011}.
 
 %=======
 
-Okura2006 \& Okura2011
+\textbf{***Video see through \& enhanced mobility by using a UMPC, this deserves better talking about in relation to Mirrorshades.}
 
-This study developed a virtual tourism system “beyond time and
-space” using augmented telepresence. Telepresence is a technique
-that provides a view of a remote site using immersive displays. In
-this paper, augmented telepresence (AT) refers to a kind of telepresence
-that provides a user with both a view of a remote site and
-related information using augmented reality (AR) techniques.
-The 1300th anniversary of Nara Heijo-kyo capital, an ancient capital
-in Japan, was last year. The proposed system superimposes
-CG of the Heijo palace which was built 1300 years ago “beyond
-time” on recorded videos captured from an unmanned airship at
-the remote site “beyond space.” Related AT works using recorded
-videos (e.g. [Ghadirian and Bishop 2008]) cannot resolve geometric
-and photometric registration problems, and/or they do not provide
-for immersive telepresence. This study handles geometric and
-photometric registration problems for automatic movie-quality registration.
-In addition, the proposed system uses omnidirectional
-videos captured by an omnidirectional multi camera system (OMS)
-equipped on an airship to increase the immersiveness of telepresence
-by providing looking-around behavior for the user. To render
-augmented scenes, we use image-based-lighting (IBL) and global
-illumination (GI) techniques with an omnidirectional environmental
-map. Invisible areas of the environmental map including areas
-which the OMS cannot capture and areas which the ai
+See-through video glasses, \textbf{***definition here, will be important later because MShades is see-through}, combined with an ultra mobile PC, have been used to render virtual humans as interfaces to virtual cultural heritage content including other real-time augmentations of 3D superimpositions of virtual content atop the view of the real, whilst allowing enhanced mobility compared to traditional approaches~\cite{Magnenat-Thalmann2008a}.
 
 %=======
 
-Magnenat-Thalmann2008a
+\textbf{***This needs talking about in relation to VTW, as it used different physical platforms each(?) with GPS \& compass readings.}
 
-Virtual humans are used as interfaces as well as real-time augmentations (three-dimensional computer-generated superimpositions) in real environments, as experienced by users though specialized equipment for enhanced mobility (e.g. ultra mobile PCs and video see-through glasses).
+\textbf{***Is there any more later work about ARCHEOGUIDE? Seems like it would have spawned more work/publications.}
 
-%=======
-
-vlahakis:archeoguide
-
-Archeoguide: first results of an augmented reality, mobile computing system in cultural heritage sites
-
-A system that provides on-site help \& augmented reality reconstructions of ancient ruins. Claims to have
-applications ranging from archaeological research to education to multimedia publishing and cultural
-tourism.
-        
-Had a laptop, tablet computer \& PDA version of the system, used GPS in some to ascertain location, compass
-to ascertain direction \& to augment reality accordingly.
-
-This paper presents the ARCHEOGUIDE project
-(Augmented Reality-based Cultural Heritage On-site
-GUIDE). ARCHEOGUIDE is an IST project, funded by
-the EU, aiming at providing a personalized electronic
-guide and tour assistant to cultural site visitors. The
-system provides on-site help and Augmented Reality
-reconstructions of ancient ruins, based on user’s
-position and orientation in the cultural site, and real-
-time image rendering. It incorporates a multimedia
-database of cultural material for on-line access to
-cultural data, virtual visits, and restoration information.
-It uses multi-modal user interfaces and personalizes the
-flow of information to its user’s profile in order to cater
-for both professional and recreational users, and for
-applications ranging from archaeological research, to
-education, multimedia publishing, and cultural tourism.
-This paper presents the ARCHEOGUIDE system and
-the experiences gained from the evaluation of an initial
-prototype by representative user groups at the
-archeological site of Olympia, Greece.
+The ARCHEOGUIDE project (Augmented Reality-based Cultural Heritage On-site GUIDE) aimed to provide a `personalized electronic guide \& tour assistant' to cultural heritage site visitors. On-site help \& augmented reality reconstructions of on-site ruins were presented via a laptop, a tablet computer \& a PDA, using GPS for location tracking \& magnetometer to ascertain direction such that augmentations could be placed accordingly. The applications claimed to be supported by the platform range from archaeological research to education, multimedia publishing \& cultural tourism. The platform was prototyped at the archaeological site of Olympia, Greece~\cite{vlahakis:archeoguide}.
 
 %=======
 
-benko:collaborative
+multi modal
 
-Collaborative Mixed Reality Visualization of an Archaeological Excavation
-
-We present VITA (Visual Interaction Tool for Archaeology),
-an experimental collaborative mixed reality system
-for offsite visualization of an archaeological dig. Our
-system allows multiple users to visualize the dig site in a
-mixed reality environment in which tracked, see-through,
-head-worn displays are combined with a multi-user,
-multi-touch, projected table surface, a large screen display,
-and tracked hand-held displays. We focus on augmenting
-existing archaeological analysis methods with
-new ways to organize, visualize, and combine the standard
-2D information available from an excavation (drawings,
-pictures, and notes) with textured, laser rangescanned
-3D models of objects and the site itself. Users
-can combine speech, touch, and 3D hand gestures to interact
-multimodally with the environment. Preliminary
-user tests were conducted with archaeology researchers
-and students, and their feedback is presented here. 
+The collaborative benefits of alternate reality technologies for archaeological excavations has been explored by VITA (Visual Interaction Tool for Archaeology), which allowed off-site visualisation of an archaeological dig site such that multiple users could collaborate whilst visualising the dig environment via a range of visual displays; a video see-through, head-tracked head mounted display, a projected table surface, a large screen display \& tracked hand-held displays. This provided new ways to organise, visualise \& combine the traditional 2D information associated with archaeological digs with 3D models of artefacts \& the site itself~\cite{benko:collaborative}.
 
 %=======
 
-Magnenat-Thalmann7
+2008
 
-Real Time Animation and Illumination in Ancient Roman Sites
-
-The present article discusses and details the methodological approaches and the reconstruction strategies that have been employed to realize the 3D real-time virtual simulations of the populated ancient sites of Aspendos and Pompeii, respectively visualized using a virtual and an augmented reality setup. More specifically, the two case studies to which we refer concern the VR restitution of the Roman theatre of Aspendos in Turkey, visualized as it was in the 3rd century, and the on-site AR simulation of a digitally restored Thermopolium situated at the archeological site of Pompeii in Italy. In order to enhance both simulated 3D environments, either case study presents the inclusion of real time animated virtual humans, which are re-enacting situations and activities that were typically performed in such sites during ancient times. Furthermore, the implemented modeling and real time illumination strategies of both the textured static 3D models of the sites and the simulated dynamic virtual humans are equally presented and compared.
+Real time animation \& illumination was used in a virtual reality restitution of the Roman theatre of Aspendos in Turkey, visualised as it was in the 3rd century, \& an on-site augmented reality simulation of a Thermopolium situated within Pompeii in Italy. Both included real time animated virtual humans, programmed to re-enact situations \& activities typical of their sites \& both actors \& the scenes themsevles were rendered using real time illumination strategies~\cite{Magnenat-Thalmann7}.
 
 %=======
 
@@ -210,45 +79,33 @@ The present article discusses and details the methodological approaches and the 
 
 %=======
 
-Papagiannakis2004
+\textbf{***See which came first, this or Magnenat-Thalmann7}
 
-Real-time virtual humans in AR sites
+\textbf{2005 onwards}
 
-In this paper we present our work on the LIFEPLUS EU IST project. LIFEPLUS proposes an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive AR environment. The goal of this project is to push the limits of current Augmented Reality (AR) technologies, exploring the processes of narrative design of fictional spaces where users can experience a high degree of realistic interactive immersion. Based on a captured/real-time video of a real scene, the project is oriented in enhancing these scenes by allowing the possibility to render realistic 3D simulations of virtual characters in real-time. Although initially targeted at Cultural Heritage Centers and Sites, the paradigm is by no means limited to such subjects, but encompasses all types of future Location-Based Entertainments, E- visitor Attractions, e-Worker training schemes as well as on-set visualizations for the TV/movie industry. In this paper we provide an overview of the project and the technologies being employed and finally we present early results based on the ongoing research.
+The concept of real-time humans in AR sites was further investigated in the LIFEPLUS EU IST project, which aimed to produce ``an innovative 3D reconstruction of ancient frescos-paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial life dramaturgical behaviors, in an immersive AR environment''. This project pushed established augmented reality applications to the field by exploring narrative design in fictional spaces, with the aim of increasing immersion via realistic interaction, making use of captured/real-time video of a real scene~\cite{Papagiannakis2004}, presenting the visitor with ``an immersive and innovative multi-sensory interactive trip to the past''~\cite{Papagiannakis2005}.
 
-Papagiannakis2005
-
-Mixing virtual and real scenes in the site of ancient Pompeii
-
-This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.
-
-Papagiannakis2007
-
-Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii
-
-We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF
-
-Papagiannakis2009
-
-Recreating Daily Life in Pompeii
-
-We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.
+These realistic simulations of animated virtual human actors were employed in a mobile \& wearable setup, in abandonment of traditional concepts of static cultural artefacts or rigid augmentations of real world features, making use of a markerless camera tracker \& a PRT\textbf{(???)} mixed reality illumination model for more consistent real-virtual \& virtual-real rendering. This platform was demonstrated in a case study on the real site of ancient Pompeii. Whilst initially targetted at the cultural heritage sector, the author(s) clarifies that as a platform it in no way limited to use with such subjects~\cite{Papagiannakis2007}. The concept of extended rigid \& static AR with character-based event representations was pushed further by the author(s), with hopes of rereating not just discrete artefacts but the entirety of `daily life' in Pompeii~\cite{Papagiannakis2009}.
 
 %=======
 
-Taketomi2011
+The use of omnidirectional range sensing for registration of real \& virtual content at cultural heritage sites has been explored, combining these close local shapes aquired from rangefinding with a landmark database of the large scale environment to achieve accurate registration for AR sightnseeing in historic sites~\cite{Taketomi2011}.
 
-AR Cultural Heritage Reconstruction Based on Feature Landmark Database Constructed by Using Omnidirectional Range Sensor
-
-This paper describes an application of augmented reality (AR) techniques to virtual cultural heritage reconstruction on the real sites of defunct constructs. To realize AR-based cultural heritage reconstruction, extrinsic camera parameter estimation is required for geometric registration of real and virtual worlds. To estimate extrinsic camera parameters, we use a pre-constructed feature landmark database of the target environment. Conventionally, a feature landmark database has been constructed in a large-scale environment using a structure -from-motion technique for omnidirectional image sequences. However, the accuracy of estimated camera parameters is insufficient for specific applications like AR-based cultural heritage reconstruction, which needs to overlay CG objects at the position close to the user’s viewpoint. This is due to the difficulty in compensation of the appearance change of close landmarks only from the sparse 3-D information obtained by structure-from-motion. In this paper, visual patterns of landmarks are compensated for by considering local shapes obtained by omnidirectional range finder to find corresponding landmarks existing close to the user. By using these landmarks with local shapes, accurate geometric registration is achieved for AR sightseeing in historic sites.
+\clearpage
 
 %=========================================================================================================
 % VR citations
 %=========================================================================================================
 
+\textbf{***It seems that I don't really have many citations (in here at least, check Mendeley/folders) for *VR* being used in cultural heritage, but I have plenty for AR. Surely there must be lots more showing VR being used in CAVEs \& HMD (I'm thinking of one paper in particular that I don't think is cited here, has nice photos in)? I want to show that both AR \& VR have been applied to cultural heritage, but whereas AR maintains user mobility \& VR provides more atmospheric immersion, there haven't really been any attempts to combine the two \& allow users to be mobile in an atmospheric immersive VR counterpart to a real location.}
+
 In particular, virtual reality has been used to allow people to immerse themselves in reconstructions of places that no longer exist \& augmented reality has been used to introduce pieces of the past atop a view of what remains in the real world today.
 
 %=======
+
+\textbf{***Does this actually mention any alternate reality stuff, or should I just use it as a citation for the importance of atmospheric immersion to experience virtual content in cultural heritage?}
+
+\textbf{*** Major good quote for VR (\& thus PR) vs AR!!!}
 
 deamicis:gamebased
 
@@ -264,9 +121,9 @@ Uses Unity3D! Mentions that it can produce web browser based applications as wel
 ones, has a simple authoring interface \& "exploits the latest graphical hardware by making extensive
 use of shaders to deliver high quality graphics".
 
-\textbf{*** Major good quote for VR (\& thus PR) vs AR!!!}
-
 %=======
+
+\textbf{***A lot of this is about virtual heritage in general \& would be good to open the section with, rather than trying to use it as a specifically VR citation.}
 
 roussou:photorealism
 
@@ -383,36 +240,15 @@ think will increase and help current architectural development.
 
 %=======
 
-Christou2006
+Leveraging a model of an ancient Greek templed in Messene created as part of the CREATE project, a system made use of a CAVE-like theatre, consisting of head-tracked user localization, a 2-armed haptic interface with realistic physics engine \& 3D sound, to host large scale visualizations of cultural heritage sites. Initial user studies into the usability \& performance of the system employed a simple task to ascertain the benefit (if any) of the haptic interface, while an additional qualitative study of the final system took place while it was installed in a museum~\cite{Christou2006}.
 
-A versatile large-scale multimodal VR system for cultural heritage visualization
-
-We describe the development and evaluation of a large-scale
-multimodal virtual reality simulation suitable for the visualization
-of cultural heritage sites and architectural planning. The system is
-demonstrated with a reconstruction of an ancient Greek temple in
-Messene that was created as part of a EU funded cultural heritage
-project (CREATE). The system utilizes a CAVE-like theatre
-consisting of head-tracked user localization, a haptic interface
-with two arms, and 3D sound. The haptic interface was coupled
-with a realistic physics engine allowing users to experience and
-fully appreciate the effort involved in the construction of
-architectural components and their changes through the ages.
-Initial user-based studies were carried out, to evaluate the
-usability and performance of the system. A simple task of
-stacking blocks was used to compare errors and timing in a
-haptics-enabled system with a haptics-disabled system. In
-addition, a qualitative study of the final system took place while
-it was installed in a museum.
-
-Uses a CAVE with a 2-armed haptic interface. Applicability of haptic interfaces for cross
-reality?
-        
-Useful quote for the shortcomings of self-proclaimed virtual worlds - "Such environments suffer
+\textbf{***Useful quote for the shortcomings of self-proclaimed virtual worlds - "Such environments suffer
 either from a lack of realism or a low degree of interactivity, due to technological and
-methodological constraints.".
+methodological constraints.".}
 
 %=======
+
+\textbf{***Use as reference for performance of Mirrorshades/Unity vs VTW/OpenSim - talks about a lot of fundamental graphics optimization things but in a heritage setting}
 
 willmott:largecomplex
 
