vtw structuring, fritzing diagrams

--- a/thesis.tex
+++ b/thesis.tex
@@ -101,7 +101,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{A Virtual Time Window}
-\graphicspath{ {04_vtw/} }
+\graphicspath{ {04_vtw/images/} }
 \input{04_vtw/vtw.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
